# DaaS

./: .gitignore  CMakeLists.txt  DaaS.cpp  DaaS_config.h.in  README.md  daemon.c  datadog.hpp  datadog.tpp  http_request_handler.hpp  http_request_handler.tpp  lightweight_logger.hpp  logentries.hpp  logentries.tpp  logging.hpp  metrics.hpp  net_api.cpp  net_api.hpp  shared_queue.hpp  shared_queue.tpp
test/: CMakeLists.txt  DaaS-tests.cpp  http_request_handler_test.hpp  lightweight_logger_test.hpp  logging_test.hpp  metrics_test.hpp  net_api_mock.hpp  redirect_stdout.hpp  shared_queue_test.hpp
